--- a/index.html
+++ b/index.html
@@ -528,10 +528,17 @@
             },
             { 
                 id: 1, 
+                name: "湖畔全景", 
+                url: "https://pannellum.org/images/cerro-toco-0.jpg", 
+                thumb: "https://pannellum.org/images/cerro-toco-0.jpg",
+            }
+            { 
+                id: 2, 
                 name: "阿尔卑斯山", 
                 url: "https://pannellum.org/images/alma.jpg", 
                 thumb: "https://pannellum.org/images/alma.jpg" 
             },
+            
         ];
 
         let currentSceneId = 0;
