--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
     <script>
         const SCENE_LIST = [
-            { id: 0, name: "东港", url: "/img/P1.jpg", thumb: "/img/P1-1.jpg" },
+            { id: 0, name: "东港", url: "https://cllli.oss-cn-beijing.aliyuncs.com/img/panoramic/P1.jpg", thumb: "https://cllli.oss-cn-beijing.aliyuncs.com/img/panoramic/P1-1.jpg" },
             { id: 1, name: "测试", url: "https://pannellum.org/images/alma.jpg", thumb: "https://pannellum.org/images/alma.jpg" },
         ];
 
