--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
     <script>
         const SCENE_LIST = [
             { id: 0, name: "东港", url: "https://cllli.oss-cn-beijing.aliyuncs.com/img/panoramic/P1.jpg", thumb: "https://cllli.oss-cn-beijing.aliyuncs.com/img/panoramic/P1-1.jpg" },
+            { id: 0, name: "中山广场", url: "https://cllli.oss-cn-beijing.aliyuncs.com/img/panoramic/P2.jpg", thumb: "https://cllli.oss-cn-beijing.aliyuncs.com/img/panoramic/P2-2.jpg" },
             { id: 1, name: "测试", url: "https://pannellum.org/images/alma.jpg", thumb: "https://pannellum.org/images/alma.jpg" },
         ];
 
